@@ -59,19 +59,21 @@ endif !%FASTDEP%
 ?!GENERIC?%OBJOBJ%: %SOURCE%
 if %FASTDEP%
 ## In fast-dep mode, we can always use -o.
+	file="`test -f '%SOURCE%' || echo '$(srcdir)/'`%SOURCE%"; \
 	if %COMPILE% -MT %OBJOBJ% -MD -MP -MF "%DEPBASE%.Tpo" \
-	  %-c% -o %OBJOBJ% `cygpath -w %SOURCE%`; \
+	  %-c% -o %OBJOBJ% `cygpath -w "$$file"`; \
 	then mv "%DEPBASE%.Tpo" "%DEPBASE%.Po"; \
 	else rm -f "%DEPBASE%.Tpo"; exit 1; \
 	fi
 else !%FASTDEP%
+	file="`test -f '%SOURCE%' || echo '$(srcdir)/'`%SOURCE%"; \
 if %AMDEP%
 	source='%SOURCE%' object='%OBJOBJ%' libtool=no @AMDEPBACKSLASH@
 	depfile='%DEPBASE%.Po' tmpdepfile='%DEPBASE%.TPo' @AMDEPBACKSLASH@
 	$(%FPFX%DEPMODE) $(depcomp) @AMDEPBACKSLASH@
 endif %AMDEP%
-?-o?	%COMPILE% %-c% %-o% %OBJOBJ% `cygpath -w %SOURCE%`
-?!-o?	%COMPILE% %-c% `cygpath -w %SOURCE%`
+?-o?	%COMPILE% %-c% %-o% %OBJOBJ% `cygpath -w "$$file"`
+?!-o?	%COMPILE% %-c% `cygpath -w "$$file"`
 endif !%FASTDEP%
 
 if %?LIBTOOL%
