@@ -1,3 +1,8 @@
+2002-07-09  Tom Tromey  <tromey@redhat.com>
+
+	* lib/am/depend2.am: Search in srcdir and builddir for %SOURCE%
+	before passing to cygpath.  Partial fix for PR automake/334.
+
 2002-07-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (generate_makefile): Suggest using AM_CPPFLAGS
